[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsb-latent-sde"
version = "0.1.0"
description = "Amortised latent neural SDE (VAE-SDE) for ADS-B trajectory anomaly detection"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "torch",
    "torchsde",
    "tqdm",
    "matplotlib",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
